objects/Associated_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Attitude_towards_Danfoss__c</fullName>
        <description>CE Stakeholder Mapping field</description>
        <inlineHelpText>What is the customers attitude towards Danfoss</inlineHelpText>
        <label>Attitude towards Danfoss</label>
        <picklist>
            <picklistValues>
                <fullName>Enthusiastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attitude_towards_competition__c</fullName>
        <description>CE Stakeholder Mapping</description>
        <inlineHelpText>What is the customers attitude towards the competition</inlineHelpText>
        <label>Attitude towards competition</label>
        <picklist>
            <picklistValues>
                <fullName>Enthusiastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Contacts</relationshipLabel>
        <relationshipName>Associated_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Influence_on_Purchasing_Decision__c</fullName>
        <label>Influence on Purchasing Decision</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Associated Contacts</relationshipLabel>
        <relationshipName>Associated_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role_in_the_buying_Center__c</fullName>
        <description>CE Stakeholder Mapping field</description>
        <inlineHelpText>What is the cutomer contacts role in the buying center</inlineHelpText>
        <label>Role in the buying Center</label>
        <picklist>
            <picklistValues>
                <fullName>Ultimate approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enemy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency_of_need__c</fullName>
        <description>CE Stakeholder Mapping field</description>
        <inlineHelpText>How urgent is the need for our products</inlineHelpText>
        <label>Urgency of need</label>
        <picklist>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>